bin_PROGRAMS=binary_tree \
       grid        \
       hashtable   \
       linked_list \
       shuffle     \
       sort        \
       stack       \
       stack_with_min

pkginclude_HEADERS=binary_tree.h  config.h  factorial.h  grid.h  hashtable.h  linked_list.h  shuffle.h  sort.h  stack.h  stack_with_min.h  swap.h

TESTS=$(bin_PROGRAMS)
